--- a/src/main/resources/static/authors.html
+++ b/src/main/resources/static/authors.html
@@ -48,7 +48,9 @@
     <h1>Autori</h1>
     <input class="form-control" type="text" placeholder="Search" aria-label="Search">
 </div>
-
+<div class="administration d-flex justify-content-center">
+    <a class="btn btn-primary" href="admin/authors.html">Administrácia</a>
+</div>
 <div class="container">
     <div class="row row-cols-1 row-cols-md-2 g-5">
         <div class="col author-detail">
